--- a/frontend/src/components/screen/auth/auth.module.scss
+++ b/frontend/src/components/screen/auth/auth.module.scss
@@ -1,3 +1,5 @@
+@import '../../../variables.scss';
+
 .authWindow {
   display: flex;
   flex-direction: column;
@@ -7,17 +9,17 @@
   width: 100%;
   height: 3vh;
   min-height: 35px;
-  border: 1px solid antiquewhite;
-  background-color: antiquewhite;
+  border: 1px solid map-get($LM, inputAuthDefault);
+  background-color: map-get($LM, inputAuthDefault);
   border-radius: 10px;
   text-align: center;
   font-size: 2em;
 }
 
 .authWindow input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 1000px rgb(249, 173, 73) inset !important;
-  background-color: rgb(249, 173, 73);
-  border: 1px solid rgb(249, 173, 73);
+  -webkit-box-shadow: 0 0 0 1000px map-get($LM, inputAuthAC) inset !important;
+  background-color: map-get($LM, inputAuthAC);
+  border: 1px solid map-get($LM, inputAuthAC);
 }
 
 .buttonContainer {
@@ -29,15 +31,14 @@
 }
 
 .buttonContainer button {
-  background-color: #1877f2;
-  color: white;
-  border-color: #1877f2;
+  background-color: map-get($LM, btnBgColor);
+  color: map-get($LM, btnColor);
+  border-color: map-get($LM, btnBgColor);
   margin-bottom: 10px;
 }
 
 .inputContainer {
   display: flex;
-  /* justify-content: flex-end; */
   margin-bottom: 10px;
   padding-right: 2%;
   padding-left: 2%;
