--- a/frontend/src/components/screen/auth/auth.module.scss
+++ b/frontend/src/components/screen/auth/auth.module.scss
@@ -3,23 +3,21 @@
 .authWindow {
   display: flex;
   flex-direction: column;
-}
-
-.authWindow input {
-  width: 100%;
-  height: 3vh;
-  min-height: 35px;
-  border: 1px solid map-get($LM, inputAuthDefault);
-  background-color: map-get($LM, inputAuthDefault);
-  border-radius: 10px;
-  text-align: center;
-  font-size: 2em;
-}
-
-.authWindow input:-webkit-autofill {
-  -webkit-box-shadow: 0 0 0 1000px map-get($LM, inputAuthAC) inset !important;
-  background-color: map-get($LM, inputAuthAC);
-  border: 1px solid map-get($LM, inputAuthAC);
+  input {
+    width: 100%;
+    height: 3vh;
+    min-height: 35px;
+    border: 1px solid map-get($LM, inputAuthDefault);
+    background-color: map-get($LM, inputAuthDefault);
+    border-radius: 10px;
+    text-align: center;
+    font-size: 2em;
+  }
+  input:-webkit-autofill {
+    -webkit-box-shadow: 0 0 0 1000px map-get($LM, inputAuthAC) inset !important;
+    background-color: map-get($LM, inputAuthAC);
+    border: 1px solid map-get($LM, inputAuthAC);
+  }
 }
 
 .buttonContainer {
@@ -28,13 +26,12 @@
   display: flex;
   justify-content: center;
   width: 100%;
-}
-
-.buttonContainer button {
-  background-color: map-get($LM, btnBgColor);
-  color: map-get($LM, btnColor);
-  border-color: map-get($LM, btnBgColor);
-  margin-bottom: 10px;
+  button {
+    background-color: map-get($LM, btnBgColor);
+    color: map-get($LM, btnColor);
+    border-color: map-get($LM, btnBgColor);
+    margin-bottom: 10px;
+  }
 }
 
 .inputContainer {
@@ -42,8 +39,7 @@
   margin-bottom: 10px;
   padding-right: 2%;
   padding-left: 2%;
-}
-
-.inputContainer input::placeholder {
-  text-align: center;
+  input::placeholder {
+    text-align: center;
+  }
 }
