--- a/frontend/src/components/ui/button/my-button.module.scss
+++ b/frontend/src/components/ui/button/my-button.module.scss
@@ -7,8 +7,7 @@
   border-radius: 5px;
   width: 10vw;
   min-width: 150px;
-  height: 5vh;
-  min-height: 100px;
+  height: 100%;
   margin-top: 5px;
   transition: background-color 0.3s, border-color 0.3s;
   font-size: 200%;
