css for navbar and refactoring filenames

--- a/frontend/src/components/ui/auth-menu/auth-menu.module.scss
+++ b/frontend/src/components/ui/auth-menu/auth-menu.module.scss
@@ -1,6 +1,6 @@
 @import '../../../variables.scss';
 
-.authMenuRegister {
+.authMenu {
   display: flex;
   color: map-get($LM, authMenuRegisterColor);
   padding-bottom: 2vh;
